build_log.txt
cargo :     Checking 
flowbot-rs v0.1.0 
(C:\Users\AMAN ANU\De
sktop\amxcodes\nanobo
t\nanobot-rs-clean)
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -Encoding 
utf8 build_log.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (    Che   
 cking fl...nobot    
-rs-clean):Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
warning: unused 
imports: `ToolCall` 
and `ToolResult`
 --> src\antigravity.
rs:7:32
  |
7 | use rig::completi
on::message::{ToolCal
l, ToolResult, 
ToolResultContent, 
UserContent};
  |                  
              
^^^^^^^^  ^^^^^^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` on by 
default

warning: unused 
import: `crate::confi
g::OAuthTokens`
  --> src\antigravity
.rs:10:5
   |
10 | use crate::confi
g::OAuthTokens;
   |     ^^^^^^^^^^^^
^^^^^^^^^^^^^^

warning: unused 
import: `crate::oauth
::OAuthFlow`
  --> src\antigravity
.rs:11:5
   |
11 | use crate::oauth
::OAuthFlow;
   |     ^^^^^^^^^^^^
^^^^^^^^^^^

warning: unused 
imports: `Antigravity
CompletionModel` and 
`AntigravityStreaming
Response`
 --> 
src\agent\mod.rs:3:45
  |
3 | use crate::antigr
avity::{AntigravityCl
ient, AntigravityComp
letionModel, Antigrav
ityStreamingResponse}
;
  |                  
                     
      ^^^^^^^^^^^^^^^
^^^^^^^^^^^  ^^^^^^^^
^^^^^^^^^^^^^^^^^^^^

warning: unused 
imports: 
`AssistantContent`, 
`ToolCall`, 
`ToolFunction`, 
`ToolResultContent`, 
and `ToolResult`
 --> 
src\agent\mod.rs:5:45
  |
5 | use rig::completi
on::message::{UserCon
tent, 
AssistantContent, 
ToolCall, 
ToolResult, 
ToolResultContent, 
Text, ToolFunction};
  |                  
                     
      
^^^^^^^^^^^^^^^^  
^^^^^^^^  ^^^^^^^^^^ 
 ^^^^^^^^^^^^^^^^^   
     ^^^^^^^^^^^^

warning: unused 
import: `crate::tools
::executor::execute_t
ool`
  --> 
src\agent\mod.rs:10:5
   |
10 | use crate::tools
::executor::execute_t
ool;
   |     ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^

warning: unused 
import: `uuid::Uuid`
  --> 
src\agent\mod.rs:12:5
   |
12 | use uuid::Uuid;
   |     ^^^^^^^^^^

warning: unused 
imports: 
`Deserialize` and 
`Serialize`
  --> src\agent\mod.r
s:13:13
   |
13 | use 
serde::{Deserialize, 
Serialize};
   |             
^^^^^^^^^^^  
^^^^^^^^^

warning: unused 
import: 
`std::path::Path`
 --> src\setup\templa
tes.rs:1:5
  |
1 | use 
std::path::Path;
  |     
^^^^^^^^^^^^^^^

warning: unused 
import: `Child`
 --> src\tools\proces
s.rs:4:31
  |
4 | use tokio::proces
s::{Command, Child};
  |                  
             ^^^^^

warning: unused 
import: `SessionType`
 --> src\tools\sessio
ns.rs:4:66
  |
4 | use crate::gatewa
y::agent_manager::{Ag
entManager, 
CleanupPolicy, 
SessionType};
  |                  
                     
                     
      ^^^^^^^^^^^

warning: unused 
import: `Path`
 --> src\persistence.
rs:6:17
  |
6 | use 
std::path::{Path, 
PathBuf};
  |                 
^^^^

warning: unused 
import: 
`std::sync::Mutex`
 --> src\persistence.
rs:7:5
  |
7 | use 
std::sync::Mutex;
  |     
^^^^^^^^^^^^^^^^

warning: unused 
import: `once_cell::s
ync::Lazy`
 --> src\persistence.
rs:8:5
  |
8 | use once_cell::sy
nc::Lazy;
  |     
^^^^^^^^^^^^^^^^^^^^^

warning: unused 
import: `post`
 --> src\gateway\mod.
rs:7:20
  |
7 |     
routing::{get, post},
  |                  
  ^^^^

warning: unused 
import: `uuid::Uuid`
  --> src\gateway\mod
.rs:16:5
   |
16 | use uuid::Uuid;
   |     ^^^^^^^^^^

warning: unused 
import: 
`std::sync::Arc`
 --> 
src\telegram.rs:5:5
  |
5 | use 
std::sync::Arc;
  |     
^^^^^^^^^^^^^^

warning: unused 
import: `colored::*`
 --> 
src\doctor.rs:4:5
  |
4 | use colored::*; 
// We'll add this 
for nice output, or 
use direct ANSI 
codes if keeping 
deps minimal
  |     ^^^^^^^^^^

warning: unused 
import: 
`anyhow::Result`
 --> 
src\sessions.rs:2:5
  |
2 | use 
anyhow::Result;
  |     
^^^^^^^^^^^^^^

warning: unused 
variable: `api_key`
   --> src\antigravit
y.rs:480:5
    |
480 |     api_key: 
&Option<String>,
    |     ^^^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: 
`_api_key`
    |
    = note: `#[warn(u
nused_variables)]` 
on by default

error[E0271]: type 
mismatch resolving `<
StreamingCompletionRe
sponse<...> as 
Stream>::Item == 
Result<..., ...>`
  --> src\agent\mod.r
s:70:20
   |
70 |                 
Ok(Box::pin(stream))
   |                 
   ^^^^^^^^^^^^^^^^ 
expected `std::string
::String`, found `Str
eamingCompletionRespo
nse`
   |
   = note: expected 
enum `Result<Streamed
AssistantContent<std:
:string::String>, _>`
              found 
enum `Result<Streamed
AssistantContent<rig:
:providers::openai::S
treamingCompletionRes
ponse>, _>`
   = note: required 
for the cast from `Pi
n<Box<StreamingComple
tionResponse<Streamin
gCompletionResponse>>
>` to `Pin<Box<dyn 
Stream<Item = 
Result<..., ...>> + 
Send>>`
   = note: the full 
name for the type 
has been written to 
'C:\Users\AMAN ANU\De
sktop\amxcodes\nanobo
t\nanobot-rs-clean\ta
rget\debug\deps\flowb
ot_rs-7a35bc3a6318a4b
3.long-type-577006293
5353804704.txt'
   = note: consider 
using `--verbose` to 
print the full type 
name to the console

error[E0599]: no 
method named 
`completion_model` 
found for enum 
`Result` in the 
current scope
   --> src\agent\mod.
rs:100:46
    |
100 |                
 AgentProvider::OpenA
I(client.completion_m
odel("google/gemini-2
.0-flash-001"))
    |                
                     
         
^^^^^^^^^^^^^^^^ 
method not found in `
Result<rig::client::C
lient<OpenAIResponses
Ext, _>, rig::http_cl
ient::Error>`

error[E0599]: no 
method named 
`completion_model` 
found for enum 
`Result` in the 
current scope
   --> src\agent\mod.
rs:108:47
    |
108 |                
  AgentProvider::Open
AI(client.completion_
model("gpt-4o"))
    |                
                     
          
^^^^^^^^^^^^^^^^ 
method not found in `
Result<rig::client::C
lient<OpenAIResponses
Ext, _>, rig::http_cl
ient::Error>`

error[E0599]: no 
associated item 
named `Many` found 
for struct 
`OneOrMany` in the 
current scope
   --> src\agent\mod.
rs:207:42
    |
207 |                
 chat_history: OneOrM
any::Many(chat_histor
y.clone()), // Fix: 
wrap in OneOrMany
    |                
                     
     ^^^^ associated 
item not found in 
`OneOrMany<_>`
    |
note: if you're 
trying to build a 
new `OneOrMany<_>` 
consider using one 
of the following 
associated functions:
      
OneOrMany::<T>::one
      
OneOrMany::<T>::many
      
OneOrMany::<T>::merge
   --> C:\Users\AMAN 
ANU\.cargo\registry\s
rc\index.crates.io-19
49cf8c6b5b557f\rig-co
re-0.29.0\src\one_or_
many.rs:93:5
    |
 93 |       pub fn 
one(item: T) -> Self 
{
    |       ^^^^^^^^^
^^^^^^^^^^^^^^^^^^
...
101 | /     pub fn 
many<I>(items: I) -> 
Result<Self, 
EmptyListError>
102 | |     where
103 | |         I: 
IntoIterator<Item = 
T>,
    | |______________
____________________^
...
116 | /     pub fn me
rge<I>(one_or_many_it
ems: I) -> 
Result<Self, 
EmptyListError>
117 | |     where
118 | |         I: 
IntoIterator<Item = 
OneOrMany<T>>,
    | |______________
_____________________
__________^
help: there is an 
associated function 
`many` with a 
similar name
    |
207 -                
 chat_history: OneOrM
any::Many(chat_histor
y.clone()), // Fix: 
wrap in OneOrMany
207 +                
 chat_history: OneOrM
any::many(chat_histor
y.clone()), // Fix: 
wrap in OneOrMany
    |

error[E0063]: 
missing field 
`tool_choice` in 
initializer of `rig::
completion::Completio
nRequest`
   --> src\agent\mod.
rs:206:27
    |
206 |             
let request = 
CompletionRequest {
    |                
           
^^^^^^^^^^^^^^^^^ 
missing `tool_choice`

warning: unused 
variable: 
`noise_selector`
  --> src\tools\fetch
.rs:51:13
   |
51 |         let 
noise_selector = Sele
ctor::parse("script, 
style, nav, footer, 
iframe, svg, 
noscript").unwrap();
   |             
^^^^^^^^^^^^^^ help: 
if this is 
intentional, prefix 
it with an 
underscore: 
`_noise_selector`

warning: unused 
variable: `label`
   --> src\gateway\ag
ent_manager.rs:112:9
    |
112 |         label: 
Option<String>,
    |         ^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: `_label`

warning: variable 
does not need to be 
mutable
  --> src\gateway\mod
.rs:73:9
   |
73 |     let mut 
send_task = 
tokio::spawn(async 
move {
   |         
----^^^^^^^^^
   |         |
   |         help: 
remove this `mut`
   |
   = note: `#[warn(un
used_mut)]` on by 
default

warning: variable 
does not need to be 
mutable
   --> src\telegram.r
s:224:13
    |
224 |         let 
mut current_prompt = 
message.to_string();
    |             
----^^^^^^^^^^^^^^
    |             |
    |             
help: remove this 
`mut`

error[E0308]: 
mismatched types
   --> src\agent\mod.
rs:214:36
    |
214 |                
 additional_params: 
json!({}),
    |                
                    
^^^^^^^^^ expected 
`Option<Value>`, 
found `Value`
    |
    = note: expected 
enum `std::option::Op
tion<serde_json::Valu
e>`
               found 
enum 
`serde_json::Value`
    = note: this 
error originates in 
the macro `$crate::js
on_internal` which 
comes from the 
expansion of the 
macro `json` (in 
Nightly builds, run 
with -Z 
macro-backtrace for 
more info)
help: call 
`Into::into` on this 
expression to 
convert 
`serde_json::Value` 
into `std::option::Op
tion<serde_json::Valu
e>`
    |
214 |                
 additional_params: 
json!({}).into(),
    |                
                     
        +++++++

Some errors have 
detailed 
explanations: E0063, 
E0271, E0308, E0599.
For more information 
about an error, try 
`rustc --explain 
E0063`.
warning: 
`flowbot-rs` (lib) 
generated 24 warnings
error: could not 
compile `flowbot-rs` 
(lib) due to 6 
previous errors; 24 
warnings emitted
